--- a/hm28-springDataJdbc/src/main/resources/application.properties
+++ b/hm28-springDataJdbc/src/main/resources/application.properties
@@ -1,17 +1,22 @@
-spring.datasource.url=jdbc:postgresql://localhost:5430/demoDB
+spring.datasource.url=jdbc:postgresql://localhost:5430/demoDB?currentSchema=my_schema
 spring.datasource.username=usr
 spring.datasource.password=pwd
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 spring.thymeleaf.cache=false
 spring.datasource.initialization-mode=always
 
-# ?????????? R2DBC ????????????????
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.schemas=my_schema
+spring.flyway.default-schema=my_schema
+spring.flyway.validate-on-migrate=false
+spring.datasource.schema=my_schema
+
+# ????????? ?????????????? ??????????? R2DBC
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
 
 logging.level.org.springframework.web=DEBUG
@@ -19,6 +24,6 @@ logging.level.org.springframework.boot=DEBUG
 logging.level.org.springframework=DEBUG
 logging.level.org.springframework.data.jdbc=TRACE
 logging.level.org.flywaydb.core=DEBUG
-
-
-
+logging.level.org.flywaydb=DEBUG
+spring.datasource.hikari.connection-init-sql=SET search_path TO my_schema;
+spring.jpa.properties.hibernate.globally_quoted_identifiers=false
